--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -92,13 +92,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - python_version: 3.7
-            oracle_version: 12.2.0.1.0
-
-          - python_version: 3.6
-            oracle_version: 12.2.0.1.0
-
-          - python_version: 2.7
+          - python_version: 3.11
             oracle_version: 12.2.0.1.0
     steps:
       - uses: actions/checkout@v1
@@ -206,26 +200,6 @@ jobs:
         if: "contains(github.event.head_commit.message, '[force build]')"
         uses: ./.github/actions/build-and-publish-force
 
-  gkecli:
-    env:
-      IMAGE_NAME: gkecli
-    runs-on: ubuntu-latest
-    name: gkecli
-    steps:
-      - uses: actions/checkout@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Dockerhub login
-        run: docker login -u ${{ secrets.DH_USERNAME }} -p ${{ secrets.DH_PASSWORD }};
-      - name: ECR public login
-        run: /usr/local/bin/aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
-      - name: Build and Publish
-        if: "!contains(github.event.head_commit.message, '[force build]')"
-        uses: ./.github/actions/build-and-publish
-      - name: Build and Publish (force)
-        if: "contains(github.event.head_commit.message, '[force build]')"
-        uses: ./.github/actions/build-and-publish-force
-
   go-pact:
     env:
       IMAGE_NAME: go-pact
@@ -257,6 +231,10 @@ jobs:
     env:
       IMAGE_NAME: karma
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - node-base: lts-alpine3.16
     name: karma
     steps:
       - uses: actions/checkout@v1
@@ -268,9 +246,13 @@ jobs:
         run: /usr/local/bin/aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
       - name: Build and Publish
         if: "!contains(github.event.head_commit.message, '[force build]')"
+        with:
+          docker_build_args: NODE_BASE=${{ matrix.node-base }}
         uses: ./.github/actions/build-and-publish
       - name: Build and Publish (force)
         if: "contains(github.event.head_commit.message, '[force build]')"
+        with:
+          docker_build_args: NODE_BASE=${{ matrix.node-base }}
         uses: ./.github/actions/build-and-publish-force
 
   kubectl:
