updates: no more pushing to dockerhub (remove DH_REPO) (#78)
updates: no more pushing to dockerhub
- remove dockerhub login, remove DH_REPO envvar
- update README.md to use ecr alias instead of id; remove all dockerhub info except for local testing

--- a/.github/actions/build-and-publish-force/action.yaml
+++ b/.github/actions/build-and-publish-force/action.yaml
@@ -10,7 +10,6 @@ runs:
   steps:
     - name: Build and publish force
       run: |
-        ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" "${{ inputs.docker_build_args}}" "${ECR_REPO}";
-        ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
+        ./.scripts/.build.sh "${ECR_REPO}" "${IMAGE_NAME}" "${{ inputs.docker_build_args}}";
         ./${IMAGE_NAME}/.publish.sh "${ECR_REPO}:${IMAGE_NAME}" --force;
       shell: bash
