--- a/.github/actions/build-and-publish/action.yaml
+++ b/.github/actions/build-and-publish/action.yaml
@@ -10,7 +10,6 @@ runs:
   steps:
     - name: Build and publish
       run: |
-        ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" "${{ inputs.docker_build_args}}" "${ECR_REPO}";
-        ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+        ./.scripts/.build.sh "${ECR_REPO}" "${IMAGE_NAME}" "${{ inputs.docker_build_args}}";
         ./${IMAGE_NAME}/.publish.sh "${ECR_REPO}:${IMAGE_NAME}";
       shell: bash
