chore: upgrade github actions and node to include awscli

--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,8 +1,8 @@
-ARG NODE_MAJOR_VERSION="9"
+ARG NODE_MAJOR_VERSION="18"
 FROM node:${NODE_MAJOR_VERSION}-alpine
 LABEL maintainer="zephinzer <dev-at-joeir-dot-net>" \
       description="Node ${NODE_MAJOR_VERSION}.* container for use in CI pipelines"
-ENV APK_DEPENDENCIES="bash curl git jq vim make g++" \
+ENV APK_DEPENDENCIES="bash curl git jq vim make aws-cli g++" \
     PATHS_TO_REMOVE="\
       /usr/include/* \
       /usr/share/man/* \
