--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -16,7 +16,7 @@ RUN npm install -g cypress mysql pg \
                    eslint @faker-js/faker@5.5.3 fs-extra moment prettier dotenv \
                    lodash date-fns cypress-fail-fast axios glob js-yaml @govtechsg/purple-hats
 
-# Install node dependencies for the purpleHATS
+# Install node dependencies for the purple-hats - https://github.com/GovTechSG/purple-hats/blob/master/INTEGRATION.md
 RUN npm install --prefix $(npm root -g)/@govtechsg/purple-hats
 
 COPY ./version-info /usr/bin
