Revert "Upgrade cypress node version to 18.17.1"
This reverts commit e885df3958adb4d35578fdd554a2913f4e54c4cb.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -111,7 +111,7 @@ jobs:
     name: cypress
     strategy:
       matrix:
-        node-version: [ 16.16.0, 18.17.1 ]
+        node-version: [ 16.16.0 ]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Docker Buildx
